atualizações e menu adicionados, usando flexbox

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,8 +1,8 @@
 @charset UTF-8
 
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -40,4 +40,25 @@ iframe#tela {
   left: 22px;
   width: 265px;
   height: 471px;
+}
+
+section#redes-sociais {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+section#redes-sociais img {
+  width: 50px;
+  margin: 10px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.601);
+  box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+  border: 2px solid white;
+  transform: translate(-3px, -3px);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.601);
+  transition: transform 0.4s, border 1s;
 }
