--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 body {
+  margin: 0px;
   background: url("/imagens/fundo-madeira.jpg") no-repeat top center;
   background-size: cover;
   background-attachment: fixed;
@@ -38,7 +39,7 @@ iframe#tela {
   position: relative;
   top: 80px;
   left: 22px;
-  width: 265px;
+  width: 269px;
   height: 471px;
 }
 
